# SpotifyConnectProxy

./: .drone.jsonnet  .gitignore  CMakeLists.txt  README.md  src.cmake  unittest.cmake
debian/: README  changelog  control  copyright  default  service
src/: SpotifyConnectProxy.cpp
src/controllers/: GenericDescriptor.cpp  GenericDescriptor.hpp  GenericMulticastUdp.cpp  GenericMulticastUdp.hpp  MulticastUdpReceiver.cpp  MulticastUdpReceiver.hpp  MulticastUdpTransmitter.cpp  MulticastUdpTransmitter.hpp
src/models/: ByteArray.cpp  ByteArray.hpp  CommandlineArguments.cpp  CommandlineArguments.hpp  DnsMessageType.cpp  DnsMessageType.hpp  DnsResourceType.cpp  DnsResourceType.hpp  GenericMdnsRecord.cpp  GenericMdnsRecord.hpp  IpProtocol.cpp  IpProtocol.hpp  LogLevel.cpp  LogLevel.hpp  MdnsMessage.cpp  MdnsMessage.hpp  MdnsQueryRecord.cpp  MdnsQueryRecord.hpp  MdnsResourceRecord.cpp  MdnsResourceRecord.hpp  MulticastMessage.cpp  MulticastMessage.hpp  StringList.cpp  StringList.hpp
src/protocols/: ByteArray.cpp  ByteArray.hpp  DnsMessageType.cpp  DnsMessageType.hpp  DnsResourceType.cpp  DnsResourceType.hpp  GenericMdnsRecord.cpp  GenericMdnsRecord.hpp  IpProtocol.cpp  IpProtocol.hpp  LogLevel.cpp  LogLevel.hpp  MdnsMessage.cpp  MdnsMessage.hpp  MdnsQueryRecord.cpp  MdnsQueryRecord.hpp  MdnsResourceRecord.cpp  MdnsResourceRecord.hpp  StringList.cpp  StringList.hpp
src/utils/: CommandlineParser.cpp  CommandlineParser.hpp  Containers.cpp  Containers.hpp  Conversion.cpp  Conversion.hpp  EnumMapper.hpp  Join.cpp  Join.hpp  Log.cpp  Log.hpp  Split.cpp  (+3 more)
unittest/: gtest_main.cc
(+52 files in other folders)
